tests/Checker/everything/errors/1a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *1: return type of main is not int
Compilation was unsuccessful.
